fixed labels (#36)
* fixed labels

* first version

* out of index fix

* fixes

* use toolbar

* removed regatta combobox

* label fixes

* improve refresh

* auto refresh

* added TaskUtils

* Task improvements.

* ignore cox

* sort heats by time

* some code cleanup

* fixed some labels

* fixed several NPEs